Fixed page heads and tidied up HTML

--- a/assets/less/base_modules/button.less
+++ b/assets/less/base_modules/button.less
@@ -67,6 +67,7 @@
     text-decoration: none;
     border: none;
     cursor: pointer;
+    text-align: center;
 
     ._padding ((@TYPE-LineHeight/4), (@TYPE-FontSize * 1.5), (@TYPE-LineHeight/4), (@TYPE-FontSize * 1.5));
     ._line-height (@TYPE-FontSize);
@@ -88,7 +89,6 @@
     }
 
 }
-
 
 // BUTTON TYPES
 // ----------------------------------------------------
