--- a/assets/less/modules/page.less
+++ b/assets/less/modules/page.less
@@ -7,7 +7,9 @@
 
 .page {}
 
-.page__head {}
+.page__head {
+	._margin-bottom (@TYPE-LineHeight);
+}
 
 .page__title {
 	margin-bottom: 0;
@@ -15,6 +17,7 @@
 }
 
 .page__subtitle {
+	margin-bottom: 0;
 	._font-size (@TYPE-SIZE-Delta);
 }
 
