--- a/content/Components/tooltip.hbs
+++ b/content/Components/tooltip.hbs
@@ -8,17 +8,22 @@ nav-variant: "tooltips"
 
 <main class="w w--main">
 	<div class="g">
-	    <div class="c__md--1">
+	    <div class="c__lg--1">
 
-  			<article class="article">
-			    <header class="article__head head">
-			        <h1 class="article__title">{{title}}</h1>
-		        </header>
+  			<div class="page{{#if nav-variant}} page--{{nav-variant}}{{/if}}">
+				<div class="page__head">
+					<h1 class="page__title">{{title}}</h1>
+					{{#if subtitle}}<p class="page__subtitle">{{subtitle}}</p>{{/if}}
+				</div>
+
 <!-- writings -->
-		        <div class="article__body rte">
+
+		        <div class="page__body rte">
+
 		        </div>
 
 <!-- example -->
+
 				<section class="section section--example">
 		            <header class="section__head">
 		                <h2 class="section__title">Example</h2>
@@ -33,6 +38,7 @@ nav-variant: "tooltips"
 		        </section>
 
 <!-- code -->
+
 		    	<section class="section section--code">
 		            <header class="section__head">
 		            	<h2 class="section__title">Code</h2>
@@ -57,9 +63,8 @@ nav-variant: "tooltips"
 		            </div>
 		        </section>
 
-	        </article>
+	        </div>
 
 	    </div>
-
 	</div>
 </main>
