--- a/content/Components/index.hbs
+++ b/content/Components/index.hbs
@@ -1,7 +1,6 @@
 ---
 title: Components Index
 
-
 nav-title: "Components"
 nav-text: "Components"
 nav-variant: "components"
@@ -9,14 +8,17 @@ nav-variant: "components"
 
 <main class="w w--main">
 	<div class="g">
-	    <div class="c__md--1">
+	    <div class="c__lg--1">
 
-  			<article class="article">
-			    <header class="article__head head">
-			        <h1 class="article__title">{{title}}</h1>
-		        </header>
+  			<div class="page{{#if nav-variant}} page--{{nav-variant}}{{/if}}">
+				<div class="page__head">
+					<h1 class="page__title">{{title}}</h1>
+					{{#if subtitle}}<p class="page__subtitle">{{subtitle}}</p>{{/if}}
+				</div>
+
 <!-- writings -->
-		        <div class="article__body rte">
+
+		        <div class="page__body rte">
 
 		        </div>
 
@@ -31,9 +33,8 @@ nav-variant: "components"
 		            </div>
 		        </section>
 
-	        </article>
+	        </div>
 
 	    </div>
-
 	</div>
 </main>
