--- a/content/Systems/tables.hbs
+++ b/content/Systems/tables.hbs
@@ -1,7 +1,6 @@
 ---
 title: Tables
 
-
 nav-title: "Tables"
 nav-text: "Tables"
 nav-variant: "tables"
@@ -9,74 +8,78 @@ nav-variant: "tables"
 
 <main class="w w--main">
 	<div class="g">
-	    <div class="c__md--1">
+	    <div class="c__lg--1">
 
-  			<article class="article article--intro">
-			    <header class="article__head head">
-			        <h1 class="article__title">{{title}}</h1>
-		        </header>
+  			<div class="page{{#if nav-variant}} page--{{nav-variant}}{{/if}}">
+				<div class="page__head">
+					<h1 class="page__title">{{title}}</h1>
+					{{#if subtitle}}<p class="page__subtitle">{{subtitle}}</p>{{/if}}
+				</div>
+
 <!-- writings -->
-		        <div class="article__body rte">
 
-		        <table class="table">
-		        	<caption class="table__caption"></caption>
-			        <colgroup>
-			        	<col />
-			        	<col />
-			        	<col />
-			        	<col />
-		        	</colgroup>
-			        <thead class="table__head">
-			        	<tr class="table__row">
-				        	<th scope="col" class="table__header">Number</th>
-				        	<th scope="col" class="table__header">Name</th>
-				        	<th scope="col"class="table__header">Date</th>
-				        	<th scope="col" class="table__header">Action</th>
-			        	</tr>
-		        	</thead>
-		        	<tbody class="table_body">
-			        	<tr class="table__row">
-				        	<td class="table__cell">00001</td>
-				        	<td class="table__cell">Teimurazi Fabó Lane</td>
-				        	<td class="table__cell">04/06/1965</td>
-				        	<td class="table__cell"><a href="#edit">Edit</a></td>
-			        	</tr>
-			        	<tr class="table__row">
-				        	<td class="table__cell">00002</td>
-				        	<td class="table__cell">Visvaldis Adriaansen</td>
-				        	<td class="table__cell">04/01/1995</td>
-				        	<td class="table__cell"><a href="#edit">Edit</a></td>
-			        	</tr>
-			        	<tr class="table__row">
-				        	<td class="table__cell">00004</td>
-				        	<td class="table__cell">Jamshid Markey</td>
-				        	<td class="table__cell">11/12/2001</td>
-				        	<td class="table__cell"><a href="#edit">Edit</a></td>
-			        	</tr>
-			        	<tr class="table__row">
-				        	<td class="table__cell">00007</td>
-				        	<td class="table__cell">Oliviero Stojan</td>
-				        	<td class="table__cell">09/04/1984</td>
-				        	<td class="table__cell"><a href="#edit">Edit</a></td>
-			        	</tr>
-			        	<tr class="table__row">
-				        	<td class="table__cell">00003</td>
-				        	<td class="table__cell">Juhan Simba</td>
-				        	<td class="table__cell">26/08/1935</td>
-				        	<td class="table__cell"><a href="#edit">Edit</a></td>
-			        	</tr>
-			        	<tr class="table__row">
-				        	<td class="table__cell">00018</td>
-				        	<td class="table__cell">Mac Ruaidhrí</td>
-				        	<td class="table__cell">14/01/1978</td>
-				        	<td class="table__cell"><a href="#edit">Edit</a></td>
-			        	</tr>
-		        	</tbody>
-		        </table>
+		        <div class="page__body rte">
+
+			        <table class="table">
+			        	<caption class="table__caption"></caption>
+				        <colgroup>
+				        	<col />
+				        	<col />
+				        	<col />
+				        	<col />
+			        	</colgroup>
+				        <thead class="table__head">
+				        	<tr class="table__row">
+					        	<th scope="col" class="table__header">Number</th>
+					        	<th scope="col" class="table__header">Name</th>
+					        	<th scope="col"class="table__header">Date</th>
+					        	<th scope="col" class="table__header">Action</th>
+				        	</tr>
+			        	</thead>
+			        	<tbody class="table_body">
+				        	<tr class="table__row">
+					        	<td class="table__cell">00001</td>
+					        	<td class="table__cell">Teimurazi Fabó Lane</td>
+					        	<td class="table__cell">04/06/1965</td>
+					        	<td class="table__cell"><a href="#edit">Edit</a></td>
+				        	</tr>
+				        	<tr class="table__row">
+					        	<td class="table__cell">00002</td>
+					        	<td class="table__cell">Visvaldis Adriaansen</td>
+					        	<td class="table__cell">04/01/1995</td>
+					        	<td class="table__cell"><a href="#edit">Edit</a></td>
+				        	</tr>
+				        	<tr class="table__row">
+					        	<td class="table__cell">00004</td>
+					        	<td class="table__cell">Jamshid Markey</td>
+					        	<td class="table__cell">11/12/2001</td>
+					        	<td class="table__cell"><a href="#edit">Edit</a></td>
+				        	</tr>
+				        	<tr class="table__row">
+					        	<td class="table__cell">00007</td>
+					        	<td class="table__cell">Oliviero Stojan</td>
+					        	<td class="table__cell">09/04/1984</td>
+					        	<td class="table__cell"><a href="#edit">Edit</a></td>
+				        	</tr>
+				        	<tr class="table__row">
+					        	<td class="table__cell">00003</td>
+					        	<td class="table__cell">Juhan Simba</td>
+					        	<td class="table__cell">26/08/1935</td>
+					        	<td class="table__cell"><a href="#edit">Edit</a></td>
+				        	</tr>
+				        	<tr class="table__row">
+					        	<td class="table__cell">00018</td>
+					        	<td class="table__cell">Mac Ruaidhrí</td>
+					        	<td class="table__cell">14/01/1978</td>
+					        	<td class="table__cell"><a href="#edit">Edit</a></td>
+				        	</tr>
+			        	</tbody>
+			        </table>
 
 		        </div>
 
 <!-- example -->
+
 				<section class="section section--example">
 		            <header class="section__head">
 		                <h2 class="section__title">Example</h2>
@@ -91,6 +94,7 @@ nav-variant: "tables"
 		        </section>
 
 <!-- code -->
+
 		    	<section class="section section--code">
 		            <header class="section__head">
 		            	<h2 class="section__title">Code</h2>
@@ -115,9 +119,8 @@ nav-variant: "tables"
 		            </div>
 		        </section>
 
-	        </article>
+	        </div>
 
 	    </div>
-
 	</div>
 </main>
