--- a/content/_partials/article.hbs
+++ b/content/_partials/article.hbs
@@ -2,7 +2,7 @@
 	<article class="article{{#if item.modifier}} article--{{item.modifier}}{{/if}}">
 		<header class="article__head">
 			<h1 class="article__title">{{{content.title}}}</h1>
-			{{#if "sub-title"}}
+			{{#if "subtitle"}}
 				<p class="article__subtitle">{{{content.subtitle}}}</p>
 			{{/if}}
 		</header>
