--- a/content/_partials/tabber.hbs
+++ b/content/_partials/tabber.hbs
@@ -1,24 +1,24 @@
 {{#this}}
-<div class="tabber{{#if item.modifier}} tabber--{{item.modifier}}{{/if}}">
-	<div class="">
-		<ul class="buttons">
-			{{#each buttons}}
+{{#if content.tabs}}
+<div{{#if item.id}} id="{{item.id}}"{{/if}} class="tabs{{#if item.modifier}} tabs--{{item.modifier}}{{/if}}">
+	<div class="tabs__tray">
+		<ul class="list list__tabs">
+			{{#each content.tabs}}
 				{{#this}}
-					<li class="button">
-						<a href="#">{{text}}</a>
+					<li class="list__item">
+						<a href="#{{#if item.id}}{{item.id}}{{/if}}" class="list__link"{{#if content.tabTitle}} title="{{content.tabTitle}}"{{/if}}><span>{{{content.tabText}}}</span></a>
 					</li>
 				{{/this}}
 			{{/each}}
 		</ul>
 	</div>
-	<div class="">
-		<ul class="contents">
-			{{#each contents}}
-				{{#this}}
-					<li class="content">{{body}}</li>
-				{{/this}}
-			{{/each}}
-		</ul>
+	<div class="tabs__content">
+		{{#each content.tabs}}
+			{{#this}}
+				<div{{#if item.id}} id="{{item.id}}"{{/if}} class="tabs__body rte">{{{content.body}}}</div>
+			{{/this}}
+		{{/each}}
 	</div>
 </div>
+{{/if}}
 {{/this}}
