--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -2,9 +2,12 @@
 <!-- JavaScript -->
 <script src="{{ assets }}/js/app/conf.js"></script>
 <script data-main="app/main" src="{{ assets }}/js/libs/require/require.js"></script>
-<script>
+
+{{#if js-tabber}}
+<script type="text/JavaScript">
 	require(["tabber"], function() { });
 </script>
+{{/if}}
 
 {{#dev}}
 <script src="http://localhost:35730/livereload.js"></script>
