--- a/assets/less/base_modules/rte.less
+++ b/assets/less/base_modules/rte.less
@@ -9,13 +9,12 @@
     
     ol,
     ul {
-        ._padding-left (0);
-        ._margin (20, 0, 20, 0);
+        ._padding-left (@TYPE-LineHeight);
+        ._margin (@TYPE-LineHeight, 0);
 
         ol,
         ul  {
-            ._padding-left (20);
-            ._margin (10, 0, 10, 0);
+            ._margin (10, 0);
         }
 
         &:first-child {
@@ -46,11 +45,11 @@
     }
 
     blockquote {
-        color: @COLOR-GreenDarker;
-        background-color: @COLOR-GreenLighter;
+        color: @COLOR-YellowDarker;
+        background-color: @COLOR-YellowLighter;
         font-family: @TYPE-HeadingsFontFamily;
-        ._padding (20);
-        ._margin (20, 0, 20, 0);
+        ._padding (@TYPE-LineHeight);
+        ._margin (@TYPE-LineHeight, 0);
         ._border-radius (2);
         ._font-size (@TYPE-SIZE-Epsilon);
         ._box-shadow-custom(~"0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)");
