--- a/assets/less/modules/wrap.less
+++ b/assets/less/modules/wrap.less
@@ -9,24 +9,23 @@
 // ----------------------------------------------------
 
 .w {
-	._padding (40, 0);
+	
 }
 
 .w--header {
 	background-color: lighten(@NAVIGATION-BgColor, 30%);
 	text-align: center;
-	._padding (20, 0, 0, 0);
+	._padding (20, 10, 0, 10);
 }
 
 .w--navigation {
 	background-color: @NAVIGATION-BgColor;
-	padding: 0;
 	._box-shadow-custom(~"0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)");
 }
 
-.w--primary {}
-
-.w--secondary {}
+.w--main {
+	._padding (40, 0);
+}
 
 .w--footer {
 	color: @COLOR-White;
@@ -36,7 +35,6 @@
 .w--copyright {
 	color: @COLOR-White;
 	background-color: @COLOR-Base;
-	padding: 0;
 
 	a {
 		&:link,
@@ -53,12 +51,36 @@
 
 @media only screen and (max-width: @MQ-Small) {
 
+	.w--header {
+		position: fixed;
+		top: 0;
+		text-align: left;
+		z-index: 100;
+		._padding (0, 0, 0, 10);
+		._box-shadow-custom(~"0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)");
+	}
+
+	.w--navigation {
+        display: none;
+        position: fixed;
+        top: 44px;
+        z-index: 100;
+	}
+
+	.w--main {
+		._padding (44, 0, 0, 0);
+	}
+
 }
 
-// TABLET
+// TABLET & UP
 // ----------------------------------------------------
 
 @media only screen and (min-width: @MQ-Medium-min) and (max-width: @MQ-Medium) {
+
+	.w--footer {
+		._padding (20, 0);
+	}
 
 }
 
@@ -66,5 +88,9 @@
 // ----------------------------------------------------
 
 @media only screen and (min-width: @MQ-Large-min) {
+
+	.w--footer {
+		._padding (40, 0);
+	}
 
 }
