Tabber moved to Tabs

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -19,7 +19,7 @@
 @import "base_modules/table.less";
 @import "base_modules/story.less";
 @import "base_modules/rte.less";
-@import "base_modules/tabber.less";
+@import "base_modules/tabs.less";
 @import "base_modules/alert.less";
 @import "base_modules/pagination.less";
 
