--- a/content/Components/Tabs.hbs
+++ b/content/Components/Tabs.hbs
@@ -4,6 +4,7 @@ title: Tabs
 nav-title: "Tabs"
 nav-text: "Tabs"
 nav-variant: "tabs"
+js-tabs: true
 ---
 
 <main class="w w--main">
@@ -31,6 +32,7 @@ nav-variant: "tabs"
 
 		            <div class="secton__body">
 				        <!-- code -->
+	        				{{> tabs tabs }}
 
 				        <!-- end of code -->
 			        </div>
