--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -3,9 +3,9 @@
 <script src="{{ assets }}/js/app/conf.js"></script>
 <script data-main="app/main" src="{{ assets }}/js/libs/require/require.js"></script>
 
-{{#if js-tabber}}
+{{#if js-tabs}}
 <script type="text/JavaScript">
-	require(["tabber"], function() { });
+	require(["tabs"], function() { });
 </script>
 {{/if}}
 
