--- a/assets/less/base_modules/tabs.less
+++ b/assets/less/base_modules/tabs.less
@@ -7,33 +7,74 @@
 
 .tabs {}
 
-.tabs__content {
-    > div {
-	   display: none;
+.tabs__tray {
+    background-color: @COLOR-Grey;
+    ._clearfix();
 
-        &:first-child {
-        	display: block;
-        }
+}
 
-        &:target {
-        	display: block;
-        }
+.tabs__content {}
+
+.tabs__body {}
+
+.list__tabs {
+    padding:0;
+    margin:0;
+    list-style: none;
+
+    .list__item {
+        display:inline;
+    }
+    .list__link {
+        background-color: @COLOR-White;
+        ._padding(5,10);
+        ._inline-block();
     }
 }
 
+.tabber .contents li.hiding {
+    -webkit-transition: all ease-in-out 350ms;
+    -moz-transition: all ease-in-out 350ms;
+    -ms-transition: all ease-in-out 350ms;
+    -o-transition: all ease-in-out 350ms;
+    transition: all ease-in-out 350ms;    
+    opacity: 0;
+    position: absolute;
+}
 
-.list--tabs {
-    margin: 0;
-    padding: 0;
+.tabber .contents li.showing {
+    -webkit-transition: all ease-in-out 350ms;
+    -moz-transition: all ease-in-out 350ms;
+    -ms-transition: all ease-in-out 350ms;
+    -o-transition: all ease-in-out 350ms;
+    transition: all ease-in-out 350ms;    
+    opacity: 1;
+    position: relative;
+}
 
-    .list__item {
-        float: left;
-    }
+.tabber .buttons li.active {
+    background-color: orange;
+}
 
-    .list__link {
-        display: block;
-        ._padding (10);
-    }
+/* Variations for testing purposes */
+.tabber .contents .content-red {
+    background-color: red;
+}
+
+.tabber .contents .content-green {
+    background-color: green;
+}
+
+.tabber .contents .content-yellow {
+    background-color: yellow;
+}
+
+.tabber .contents .content-orange {
+    background-color: orange;
+}
+
+.tabber .contents .content-purple {
+    background-color: purple;
 }
 
 } .tabs-styles();
