--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -174,8 +174,7 @@
 @MODULE-Overlay:                true;
 @MODULE-Pagination:             true;
 @MODULE-Print:                  true;
-@MODULE-Tabber:					true;
-@MODULE-Tabs:                   false;
+@MODULE-Tabs:                   true;
 @MODULE-Tooltip:                true;
 @MODULE-Typography:             true;
 @MODULE-Story:             		true;
