--- a/content/_layouts/default.hbs
+++ b/content/_layouts/default.hbs
@@ -12,7 +12,7 @@
     <meta name="author" content="{{ app.author }}" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Playfair+Display:400,700|Open+Sans:400,700" />
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Playfair+Display:400,700%7cOpen+Sans:400,700" />
     <link rel="stylesheet" href="{{ assets }}/css/main.css" />
 
     <!-- For retina-display iPads -->
