Various small fixes

--- a/content/Checklists/_checklist.hbs
+++ b/content/Checklists/_checklist.hbs
@@ -11,14 +11,14 @@ nav-variant: "checklist"
 	<div class="g">
 	    <div class="c__md--1">
 
-  			<article class="article">
-			    <header class="article__head head">
-			        <h1 class="article__title">{{title}}</h1>
-		        </header>
-		        <div class="article__body rte">
+  			<div class="page">
+			    <div class="page__head">
+			        <h1 class="page__title">{{title}}</h1>
+		        </div>
+		        <div class="page__body rte">
 		        	<p>Introduction to Checklist</p>
 		        </div>
-	        </article>
+	        </div>
 
         </div>
 
