--- a/content/Components/thumbnails.hbs
+++ b/content/Components/thumbnails.hbs
@@ -31,7 +31,7 @@ nav-variant: "thumbnails"
 
 		            <div class="secton__body">
 				        <!-- code -->
-
+				        	{{> thumbnail }}
 				        <!-- end of code -->
 			        </div>
 
