--- a/content/Systems/helpers.hbs
+++ b/content/Systems/helpers.hbs
@@ -26,11 +26,13 @@ nav-variant: "helpers"
 
 				<section class="section section--example">
 		            <header class="section__head">
-		                <h2 class="section__title">Example</h2>
+		                <h2 class="section__title">Examples: Utility Classes</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="secton__body rte">
 				        <!-- code -->
+				        	<p>These will appear as classes in their own right and can be used to modify elements without creating a new modifier for that block.</p>
+							<p><code>.c</code> <code>.invisible</code> <code>.visible</code> <code>.ir</code> <code>.rte</code> <code>.hide</code> <code>.show</code> <code>.left</code> <code>.right</code> <code>.center</code> <code>.center-block</code> <code>.show-mobile</code> <code>.show-tablet</code> <code>show-desktop</code> <code>.hide-mobile</code> <code>.hide-tablet</code> <code>hide-desktop</code> <code>.xsmall</code><code>.small</code> <code>.large</code> <code>.xlarge</code> <code>.active</code> <code>.current</code></p>
 
 				        <!-- end of code -->
 			        </div>
