--- a/content/Components/pagination.hbs
+++ b/content/Components/pagination.hbs
@@ -33,7 +33,7 @@ nav-variant: "pagination"
 				        <!-- code -->
 							<div class="pagination">
 
-								<a href="#" class="link link--pagination"><span class="hidden-text">Previous</span><i class="icon icon--left216"></i></a>
+								<a href="#" class="link link--pagination"><span class="hidden-text" aria-hidden="true">Previous</span><i class="icon icon--left216"></i></a>
 							        
 						        <ul class="list list--pagination">
 				                    <li class="list__item"><a class="list__link current" href="#">1</a></li>
@@ -41,7 +41,7 @@ nav-variant: "pagination"
 				                    <li class="list__item"><a class="list__link" href="#">3</a></li>
 						        </ul>
 						        
-						        <a href="#" class="link link--pagination"><span class="hidden-text">Previous</span><i class="icon icon--right237"></i></a>
+						        <a href="#" class="link link--pagination"><span class="hidden-text" aria-hidden="true">Next</span><i class="icon icon--right237"></i></a>
 
 							</div>
 				        <!-- end of code -->
