--- a/content/_partials/ALLOY_footer.hbs
+++ b/content/_partials/ALLOY_footer.hbs
@@ -2,11 +2,7 @@
 	<div class="g">
 	
 		<div class="c__md--1-3 c__lg--1-3">
-			<div class="panel">
-				<div class="panel__title">Message Us</div>
-				<div class="panel__body">ALLOY has a gitter chat room setup so that we can talk directly to you! Talk to us about how to improve ALLOY, discuss features, problems and everything else.</div>
-				<div class="panel__actions"><a href="https://gitter.im/gfinbow/alloy" class="button"><span>Join the chat</span></a></div>
-			</div>
+			{{>panel ALLOY_panel--messageus}}
 		</div>
 	
 		<div class="c__md--1-3 c__lg--1-3">
