More needed bits for the Page test

--- a/content/Tests/index.hbs
+++ b/content/Tests/index.hbs
@@ -1,10 +1,18 @@
 ---
-title: Oops!
-subtitle: Something went wrong...
+title: This is a test page
+subtitle: Where I am trying out wether or not we can create dynamicly linked partials
 
-nav-title: "404 Error"
-nav-text: "404 Error"
-nav-variant: "error"
+nav-title: "Test Page"
+nav-text: "test"
+nav-variant: "test"
 ---
 
-{{> ALLOY_page }}
+<main class="w w--main">
+	<div class="g">
+	    <div class="c__lg--1">
+
+			{{> ALLOY_page ALLOY_page--test}}
+
+		</div>
+	</div>
+</main>
