--- a/content/_partials/ALLOY_page.hbs
+++ b/content/_partials/ALLOY_page.hbs
@@ -1,54 +1,40 @@
-<div class="page{{#if page.nav-variant}} page--{{page.nav-variant}}{{/if}}">
+<div class="page{{#if item.modifier}} page--{{item.modifier}}{{/if}}">
 	<div class="page__head">
-		<h1 class="page__title">{{page.title}}</h1>
-		{{#if page.subtitle}}<p class="page__subtitle">{{page.subtitle}}</p>{{/if}}
+		<h1 class="page__title">{{content.title}}</h1>
+		{{#if content.subtitle}}<p class="page__subtitle">{{content.subtitle}}</p>{{/if}}
 	</div>
 
 <!-- writings -->
 
     <div class="page__body rte">
+    {{{content.body}}}
+	</div>
 
-    </div>
+	<!-- example -->
+	{{#if content.examples }}
+		{{#each content.examples}}
+			{{#this}}
+				{{> section }}
+	    	{{/this}}
+		{{/each}}
+	{{/if}}
 
-<!-- example -->
+	<!-- code -->
+	{{#if content.code }}
+		{{#each content.code}}
+			{{#this}}
+				{{> section__code }}
+	    	{{/this}}
+		{{/each}}
+	{{/if}}
 
-	<section class="section section--example">
-        <header class="section__head">
-            <h2 class="section__title">Example</h2>
-        </header>
-
-        <div class="secton__body">
-	        <!-- code -->
-
-	        <!-- end of code -->
-        </div>
-
-    </section>
-
-<!-- code -->
-
-	<section class="section section--code">
-        <header class="section__head">
-        	<h2 class="section__title">Code</h2>
-        </header>
-
-        <div class="section__body">
-            <pre class="prettyprint linenums"><code class="html">
-
-             </code></pre>
-        </div>
-
-    </section>
-
-<!-- reference -->
-
-    <section class="section section--reference">
-        <header class="section__head">
-            <h2 class="section__title">References</h2>
-        </header>
-        <div class="section__body rte">
-
-        </div>
-    </section>
+	<!-- reference -->
+	{{#if content.references }}
+		{{#each content.references}}
+			{{#this}}
+				{{> section }}
+	    	{{/this}}
+		{{/each}}
+	{{/if}}
 
 </div>
