--- a/content/_partials/ALLOY_list__navigation--main.hbs
+++ b/content/_partials/ALLOY_list__navigation--main.hbs
@@ -2,7 +2,7 @@
     {{#withSort pages "data.mainmenu"}}
         {{#if data.mainmenu }}
             {{#this}}
-                <li class="list__item"><a class="list__link{{#if page.nav-variant}} list__link--{{data.nav-variant}}{{/if}}{{#is page.dest this.dest}} current{{/is}}" href="{{relative ../page.dest this.dest}}" title="{{data.nav-title}}">{{capitalizeFirst data.nav-text}}</a></li>
+                <li class="list__item"><a class="list__link{{#if page.nav-variant}} list__link--{{data.nav-variant}}{{/if}}{{#is ../../../page.dest this.dest}} current{{/is}}" href="{{relative ../../../page.dest this.dest}}" title="{{data.nav-title}}">{{capitalizeFirst data.nav-text}}</a></li>
             {{/this}}
         {{/if}}
     {{/withSort}}
