--- a/content/Systems/grids.hbs
+++ b/content/Systems/grids.hbs
@@ -1,9 +1,9 @@
 ---
-title: Gs
+title: Grids
 
-nav-title: "Gs"
-nav-text: "Gs"
-nav-variant: "gs"
+nav-title: "Grids"
+nav-text: "Grids"
+nav-variant: "grids"
 ---
 
 <main class="w w--main">
