Added in grid system examples

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -33,6 +33,7 @@
 @import "modules/page.less";
 @import "modules/section.less";
 @import "modules/wrap.less";
+@import "modules/ALLOY.less";
 
 // HELPERS/PRINT
 // ----------------------------------------------------
