--- a/content/Systems/grids.hbs
+++ b/content/Systems/grids.hbs
@@ -23,22 +23,159 @@ nav-variant: "grids"
 		        </div>
 
 <!-- example -->
+	        </div>
+        </div>
+    </div>
+</main>
 
-				<section class="section section--example">
-		            <header class="section__head">
-		                <h2 class="section__title">Example</h2>
-		            </header>
 
-		            <div class="secton__body">
-				        <!-- code -->
+<div class="w w-example">
+	<div class="g">
+		<div class="c__lg--1"><div class="gex">1-1</div></div>
+		<div class="c__lg--1-2"><div class="gex">1-2</div></div>
+		<div class="c__lg--1-2"><div class="gex">1-2</div></div>
+		<div class="c__lg--1-3"><div class="gex">1-3</div></div>
+		<div class="c__lg--1-3"><div class="gex">1-3</div></div>
+		<div class="c__lg--1-3"><div class="gex">1-3</div></div>
+		<div class="c__lg--1-4"><div class="gex">1-4</div></div>
+		<div class="c__lg--1-4"><div class="gex">1-4</div></div>
+		<div class="c__lg--1-4"><div class="gex">1-4</div></div>
+		<div class="c__lg--1-4"><div class="gex">1-4</div></div>
+		<div class="c__lg--1-5"><div class="gex">1-5</div></div>
+		<div class="c__lg--1-5"><div class="gex">1-5</div></div>
+		<div class="c__lg--1-5"><div class="gex">1-5</div></div>
+		<div class="c__lg--1-5"><div class="gex">1-5</div></div>
+		<div class="c__lg--1-5"><div class="gex">1-5</div></div>
+		<div class="c__lg--1-6"><div class="gex">1-6</div></div>
+		<div class="c__lg--1-6"><div class="gex">1-6</div></div>
+		<div class="c__lg--1-6"><div class="gex">1-6</div></div>
+		<div class="c__lg--1-6"><div class="gex">1-6</div></div>
+		<div class="c__lg--1-6"><div class="gex">1-6</div></div>
+		<div class="c__lg--1-6"><div class="gex">1-6</div></div>
+		<div class="c__lg--1-7"><div class="gex">1-7</div></div>
+		<div class="c__lg--1-7"><div class="gex">1-7</div></div>
+		<div class="c__lg--1-7"><div class="gex">1-7</div></div>
+		<div class="c__lg--1-7"><div class="gex">1-7</div></div>
+		<div class="c__lg--1-7"><div class="gex">1-7</div></div>
+		<div class="c__lg--1-7"><div class="gex">1-7</div></div>
+		<div class="c__lg--1-7"><div class="gex">1-7</div></div>
+		<div class="c__lg--1-8"><div class="gex">1-8</div></div>
+		<div class="c__lg--1-8"><div class="gex">1-8</div></div>
+		<div class="c__lg--1-8"><div class="gex">1-8</div></div>
+		<div class="c__lg--1-8"><div class="gex">1-8</div></div>
+		<div class="c__lg--1-8"><div class="gex">1-8</div></div>
+		<div class="c__lg--1-8"><div class="gex">1-8</div></div>
+		<div class="c__lg--1-8"><div class="gex">1-8</div></div>
+		<div class="c__lg--1-8"><div class="gex">1-8</div></div>
+		<div class="c__lg--1-9"><div class="gex">1-9</div></div>
+		<div class="c__lg--1-9"><div class="gex">1-9</div></div>
+		<div class="c__lg--1-9"><div class="gex">1-9</div></div>
+		<div class="c__lg--1-9"><div class="gex">1-9</div></div>
+		<div class="c__lg--1-9"><div class="gex">1-9</div></div>
+		<div class="c__lg--1-9"><div class="gex">1-9</div></div>
+		<div class="c__lg--1-9"><div class="gex">1-9</div></div>
+		<div class="c__lg--1-9"><div class="gex">1-9</div></div>
+		<div class="c__lg--1-9"><div class="gex">1-9</div></div>
+		<div class="c__lg--1-10"><div class="gex">1-10</div></div>
+		<div class="c__lg--1-10"><div class="gex">1-10</div></div>
+		<div class="c__lg--1-10"><div class="gex">1-10</div></div>
+		<div class="c__lg--1-10"><div class="gex">1-10</div></div>
+		<div class="c__lg--1-10"><div class="gex">1-10</div></div>
+		<div class="c__lg--1-10"><div class="gex">1-10</div></div>
+		<div class="c__lg--1-10"><div class="gex">1-10</div></div>
+		<div class="c__lg--1-10"><div class="gex">1-10</div></div>
+		<div class="c__lg--1-10"><div class="gex">1-10</div></div>
+		<div class="c__lg--1-10"><div class="gex">1-10</div></div>
+		<div class="c__lg--1-11"><div class="gex">1-11</div></div>
+		<div class="c__lg--1-11"><div class="gex">1-11</div></div>
+		<div class="c__lg--1-11"><div class="gex">1-11</div></div>
+		<div class="c__lg--1-11"><div class="gex">1-11</div></div>
+		<div class="c__lg--1-11"><div class="gex">1-11</div></div>
+		<div class="c__lg--1-11"><div class="gex">1-11</div></div>
+		<div class="c__lg--1-11"><div class="gex">1-11</div></div>
+		<div class="c__lg--1-11"><div class="gex">1-11</div></div>
+		<div class="c__lg--1-11"><div class="gex">1-11</div></div>
+		<div class="c__lg--1-11"><div class="gex">1-11</div></div>
+		<div class="c__lg--1-11"><div class="gex">1-11</div></div>
+		<div class="c__lg--1-12"><div class="gex">1-12</div></div>
+		<div class="c__lg--1-12"><div class="gex">1-12</div></div>
+		<div class="c__lg--1-12"><div class="gex">1-12</div></div>
+		<div class="c__lg--1-12"><div class="gex">1-12</div></div>
+		<div class="c__lg--1-12"><div class="gex">1-12</div></div>
+		<div class="c__lg--1-12"><div class="gex">1-12</div></div>
+		<div class="c__lg--1-12"><div class="gex">1-12</div></div>
+		<div class="c__lg--1-12"><div class="gex">1-12</div></div>
+		<div class="c__lg--1-12"><div class="gex">1-12</div></div>
+		<div class="c__lg--1-12"><div class="gex">1-12</div></div>
+		<div class="c__lg--1-12"><div class="gex">1-12</div></div>
+		<div class="c__lg--1-12"><div class="gex">1-12</div></div>
+		<div class="c__lg--1-13"><div class="gex">1-13</div></div>
+		<div class="c__lg--1-13"><div class="gex">1-13</div></div>
+		<div class="c__lg--1-13"><div class="gex">1-13</div></div>
+		<div class="c__lg--1-13"><div class="gex">1-13</div></div>
+		<div class="c__lg--1-13"><div class="gex">1-13</div></div>
+		<div class="c__lg--1-13"><div class="gex">1-13</div></div>
+		<div class="c__lg--1-13"><div class="gex">1-13</div></div>
+		<div class="c__lg--1-13"><div class="gex">1-13</div></div>
+		<div class="c__lg--1-13"><div class="gex">1-13</div></div>
+		<div class="c__lg--1-13"><div class="gex">1-13</div></div>
+		<div class="c__lg--1-13"><div class="gex">1-13</div></div>
+		<div class="c__lg--1-13"><div class="gex">1-13</div></div>
+		<div class="c__lg--1-13"><div class="gex">1-13</div></div>
+		<div class="c__lg--1-14"><div class="gex">1-14</div></div>
+		<div class="c__lg--1-14"><div class="gex">1-14</div></div>
+		<div class="c__lg--1-14"><div class="gex">1-14</div></div>
+		<div class="c__lg--1-14"><div class="gex">1-14</div></div>
+		<div class="c__lg--1-14"><div class="gex">1-14</div></div>
+		<div class="c__lg--1-14"><div class="gex">1-14</div></div>
+		<div class="c__lg--1-14"><div class="gex">1-14</div></div>
+		<div class="c__lg--1-14"><div class="gex">1-14</div></div>
+		<div class="c__lg--1-14"><div class="gex">1-14</div></div>
+		<div class="c__lg--1-14"><div class="gex">1-14</div></div>
+		<div class="c__lg--1-14"><div class="gex">1-14</div></div>
+		<div class="c__lg--1-14"><div class="gex">1-14</div></div>
+		<div class="c__lg--1-14"><div class="gex">1-14</div></div>
+		<div class="c__lg--1-14"><div class="gex">1-14</div></div>
+		<div class="c__lg--1-15"><div class="gex">1-15</div></div>
+		<div class="c__lg--1-15"><div class="gex">1-15</div></div>
+		<div class="c__lg--1-15"><div class="gex">1-15</div></div>
+		<div class="c__lg--1-15"><div class="gex">1-15</div></div>
+		<div class="c__lg--1-15"><div class="gex">1-15</div></div>
+		<div class="c__lg--1-15"><div class="gex">1-15</div></div>
+		<div class="c__lg--1-15"><div class="gex">1-15</div></div>
+		<div class="c__lg--1-15"><div class="gex">1-15</div></div>
+		<div class="c__lg--1-15"><div class="gex">1-15</div></div>
+		<div class="c__lg--1-15"><div class="gex">1-15</div></div>
+		<div class="c__lg--1-15"><div class="gex">1-15</div></div>
+		<div class="c__lg--1-15"><div class="gex">1-15</div></div>
+		<div class="c__lg--1-15"><div class="gex">1-15</div></div>
+		<div class="c__lg--1-15"><div class="gex">1-15</div></div>
+		<div class="c__lg--1-15"><div class="gex">1-15</div></div>
+		<div class="c__lg--1-16"><div class="gex">1-16</div></div>
+		<div class="c__lg--1-16"><div class="gex">1-16</div></div>
+		<div class="c__lg--1-16"><div class="gex">1-16</div></div>
+		<div class="c__lg--1-16"><div class="gex">1-16</div></div>
+		<div class="c__lg--1-16"><div class="gex">1-16</div></div>
+		<div class="c__lg--1-16"><div class="gex">1-16</div></div>
+		<div class="c__lg--1-16"><div class="gex">1-16</div></div>
+		<div class="c__lg--1-16"><div class="gex">1-16</div></div>
+		<div class="c__lg--1-16"><div class="gex">1-16</div></div>
+		<div class="c__lg--1-16"><div class="gex">1-16</div></div>
+		<div class="c__lg--1-16"><div class="gex">1-16</div></div>
+		<div class="c__lg--1-16"><div class="gex">1-16</div></div>
+		<div class="c__lg--1-16"><div class="gex">1-16</div></div>
+		<div class="c__lg--1-16"><div class="gex">1-16</div></div>
+		<div class="c__lg--1-16"><div class="gex">1-16</div></div>
+		<div class="c__lg--1-16"><div class="gex">1-16</div></div>
 
-				        <!-- end of code -->
-			        </div>
-
-		        </section>
+	</div>
+</div>
 
 <!-- code -->
 
+<div class="w w--main">
+	<div class="g">
+	    <div class="c__lg--1">
 		    	<section class="section section--code">
 		            <header class="section__head">
 		            	<h2 class="section__title">Code</h2>
@@ -67,4 +204,4 @@ nav-variant: "grids"
 
 	    </div>
 	</div>
-</main>
+</div>
