--- a/content/_partials/input__hidden.hbs
+++ b/content/_partials/input__hidden.hbs
@@ -1,8 +1,8 @@
 {{#this}}
 	<input
 	    type="hidden"
-	    {{#if content.id}} id="{{content.id}}"{{/if}}
-	    {{#if content.name}} name="{{content.name}}"{{/if}}
-	    {{#if content.value}} value="{{content.value}}"{{/if}}
+	    {{#if item.id}} id="{{item.id}}"{{/if}}
+	    {{#if item.name}} name="{{item.name}}"{{/if}}
+	    {{#if item.value}} value="{{item.value}}"{{/if}}
 	/>
 {{/this}}
