--- a/content/_partials/select__option.hbs
+++ b/content/_partials/select__option.hbs
@@ -1,7 +1,6 @@
-{{! don't add a lablel to optgroup > option}}
 {{#this}}
 <option
-    value="{{content.value}}"
+    value="{{item.value}}"
     {{#if content.label}} label="{{content.label}}"{{/if}}
     {{#if item.selected}} selected="selected"{{/if}}
     {{#if item.disabled}} disabled="disabled"{{/if}}
