--- a/content/Components/select.hbs
+++ b/content/Components/select.hbs
@@ -1,9 +1,9 @@
 ---
-title: Labels
+title: Select
 
-nav-title: "Labels"
-nav-text: "Labels"
-nav-variant: "labels"
+nav-title: "Select"
+nav-text: "Select"
+nav-variant: "select"
 ---
 
 <main class="w w--main">
@@ -32,8 +32,8 @@ nav-variant: "labels"
 		            <div class="secton__body">
 				        <!-- code -->
 
-		        		{{> label label }}
-		        		{{> label label-for }}
+		        		{{> select select }}
+		        		{{> select select-optgroup }}
 
 				        <!-- end of code -->
 			        </div>
@@ -49,7 +49,22 @@ nav-variant: "labels"
 
 		            <div class="section__body">
 			            <pre class="prettyprint linenums"><code class="html">
+&lt;select class=&quot;select select--modifier&quot; required=&quot;required&quot;&gt;
+	&lt;optgroup label=&quot;OptionGroup Label&quot;&gt;
+		&lt;option value=&quot;1&quot;&gt;
+			Option Text 1
+		&lt;/option&gt;
+		&lt;option value=&quot;2&quot;&gt;
+			Option Text 2
+		&lt;/option&gt;
+	&lt;/optgroup&gt;
+&lt;/select&gt;
 
+&lt;select class=&quot;select select--modifier&quot; multiple=&quot;multiple&quot;&gt;
+	&lt;option value=&quot;&quot; label=&quot;Option Label&quot;&gt;
+		Option Text
+	&lt;/option&gt;
+&lt;/select&gt;
 			             </code></pre>
 		            </div>
 
