--- a/content/_partials/input__password.hbs
+++ b/content/_partials/input__password.hbs
@@ -8,13 +8,14 @@
         {{#if item.required}} required="required" aria-required="true"{{/if}}
         {{#if item.readonly}} readonly="readonly" aria-readonly="true"{{/if}}
         {{#if item.disabled}} disabled="disabled" aria-disabled="true"{{/if}}
-        {{#if content.id}} id="{{content.id}}"{{/if}}
-        {{#if content.name}} name="{{content.name}}"{{/if}}
+        {{#if item.id}} id="{{item.id}}"{{/if}}
+        {{#if item.name}} name="{{item.name}}"{{/if}}
+        {{#if item.maxlength}} maxlength="{{item.maxlength}}"{{/if}}
+        {{#if item.minlength}} pattern="{{item.minlength}}"{{/if}}
+        {{#if item.autocomplete}} autocomplete="{{item.autocomplete}}"{{/if}}
+        {{#if item.tabindex}} tabindex="{{item.tabindex}}"{{/if}}
+        {{#if item.accesskey}} accesskey="{{item.accesskey}}"{{/if}}
         {{#if content.placeholder}} placeholder="{{content.placeholder}}"{{/if}}
         {{#if content.value}} value="{{content.value}}"{{/if}}
-        {{#if content.maxlength}} maxlength="{{content.maxlength}}"{{/if}}
-        {{#if content.autocomplete}} autocomplete="{{content.autocomplete}}"{{/if}}
-        {{#if content.tabindex}} tabindex="{{content.tabindex}}"{{/if}}
-        {{#if content.accesskey}} accesskey="{{content.accesskey}}"{{/if}}
     />
 {{/this}}
