--- a/content/_partials/input__text.hbs
+++ b/content/_partials/input__text.hbs
@@ -9,18 +9,15 @@
         {{#if item.readonly}} readonly="readonly" aria-readonly="true"{{/if}}
         {{#if item.disabled}} disabled="disabled" aria-disabled="true"{{/if}}
         {{#if item.spellcheck}} spellcheck="true"{{/if}}
-        {{#if content.id}} id="{{content.id}}"{{/if}}
-        {{#if content.name}} name="{{content.name}}"{{/if}}
+        {{#if item.id}} id="{{item.id}}"{{/if}}
+        {{#if item.name}} name="{{item.name}}"{{/if}}
+        {{#if item.maxlength}} maxlength="{{item.maxlength}}"{{/if}}
+        {{#if item.minlength}} pattern="{{item.minlength}}"{{/if}}
+        {{#if item.pattern}} pattern="{{item.pattern}}"{{/if}}
+        {{#if item.autocomplete}} autocomplete="{{item.autocomplete}}"{{/if}}
+        {{#if item.tabindex}} tabindex="{{item.tabindex}}"{{/if}}
+        {{#if item.accesskey}} accesskey="{{item.accesskey}}"{{/if}}
         {{#if content.placeholder}} placeholder="{{content.placeholder}}"{{/if}}
         {{#if content.value}} value="{{content.value}}"{{/if}}
-        {{#if content.maxlength}} maxlength="{{content.maxlength}}"{{/if}}
-        {{#if content.pattern}} pattern="{{content.pattern}}"{{/if}}
-        {{#if content.autocomplete}} autocomplete="{{content.autocomplete}}"{{/if}}
-        {{#if content.tabindex}} tabindex="{{content.tabindex}}"{{/if}}
-        {{#if content.accesskey}} accesskey="{{content.accesskey}}"{{/if}}
     />
 {{/this}}
-
-
-
-
