--- a/content/_partials/label.hbs
+++ b/content/_partials/label.hbs
@@ -1,7 +1,7 @@
 {{#this}}
-	{{#if content.for}}
+	{{#if item.for}}
 		<label
-		    for="{{content.for}}"
+		    for="{{item.for}}"
 		    class="label{{#if item.modifier}} label--{{item.modifier}}{{/if}}">
 		    <span>{{{content.text}}}</span>
 		</label>
