--- a/content/_partials/select.hbs
+++ b/content/_partials/select.hbs
@@ -4,32 +4,33 @@
     {{#if item.multiple}} multiple="multiple"{{/if}}
     {{#if item.required}} required="required"{{/if}}
     {{#if item.disabled}} disabled="disabled"{{/if}}
-    {{#if content.id}} id="{{content.id}}"{{/if}}
-    {{#if content.form}} form="{{content.form}}"{{/if}}
-    {{#if content.name}} name="{{content.name}}"{{/if}}
-    {{#if content.size}} size="{{content.size}}"{{/if}}
-    {{#if content.autocomplete}} autocomplete="{{content.autocomplete}}"{{/if}}
-    {{#if content.tabindex}} tabindex="{{content.tabindex}}"{{/if}}
-    {{#if content.accesskey}} accesskey="{{content.accesskey}}"{{/if}}
+    {{#if item.id}} id="{{item.id}}"{{/if}}
+    {{#if item.form}} form="{{item.form}}"{{/if}}
+    {{#if item.name}} name="{{item.name}}"{{/if}}
+    {{#if item.size}} size="{{item.size}}"{{/if}}
+    {{#if item.autocomplete}} autocomplete="{{item.autocomplete}}"{{/if}}
+    {{#if item.tabindex}} tabindex="{{item.tabindex}}"{{/if}}
+    {{#if item.accesskey}} accesskey="{{item.accesskey}}"{{/if}}
 >
 
-{{#if item.select__optgroup}}
-    <optgroup label="">
+    {{#if content.select__optgroup}}
+        {{#each content.select__optgroup}}
+                {{#this}}
+                {{> select__optgroup}}
+                {{/this}}
+        {{/each}}
 
-        {{#if select__option}}
+    {{else}}
+
+        {{#if content.select__option}}
+            {{#each content.select__option}}
+                    {{#this}}
+                    {{> select__option}}
+                    {{/this}}
+            {{/each}}
         {{/if}}
 
-    </optgroup>
-{{/if}}
-
-
-{{#if item.select__option}}
-
-        {{#if select__option}}
-        {{/if}}
-
-{{/if}}
-
+    {{/if}}
 
 </select>
 {{/this}}
